--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello with git</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas nobis, repudiandae consectetur enim temporibus dignissimos minima, tempore hic cupiditate earum quae aliquam exercitationem culpa omnis sapiente animi reprehenderit molestiae obcaecati!</p>
+    <button onclick="ShowAlert()">Click</button>
+
+    <script src="main.js"></script>
 </body>
 </html>
