--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello with git</h1>
+    <p>hello every one</p>
     <h2>Hi i am donya</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas nobis, repudiandae consectetur enim temporibus dignissimos minima, tempore hic cupiditate earum quae aliquam exercitationem culpa omnis sapiente animi reprehenderit molestiae obcaecati!</p>
     <button onclick="ShowAlert()">Click</button>
